--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script>
+  document.getElementByTagName("html").setAttribute("amp","amp")
+  </script>
 </head>
 <body>
 <h1>LOKER SUMATERA</h1>
