--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <script>
-  document.getElementByTagName("html").setAttribute("amp","amp")
-  </script>
+  <head>
+    <title>CDN LOKERSUMATERA</title>
 </head>
 <body>
 <h1>LOKER SUMATERA</h1>
