--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 </head>
 <body>
 <h1>LOKER SUMATERA</h1>
-  <script src='/sw.js'/>
+  <script>
+    if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('/sw.js').then(function(registration) {
+      // Registration was successful
+      console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    }, function(err) {
+      // registration failed :(
+      console.log('ServiceWorker registration failed: ', err);
+    });
+  });
+}
+  </script>
 </body>
 </html>
